syntax_analyzer.c
#include <stdio.h>     // Standard I/O operations
#include <stdlib.h>    // Standard library functions
#include <string.h>    // String operations
#include <ctype.h>     // Character classification and conversion
#include <wctype.h>    // Wide character functions
#include <dirent.h>    // Directory operations
#include <stdbool.h>

#include "syntax_analyzer.h" // Custom syntax analyzer header
#include "token.h"           // Custom token header

// Global Variables
int currentTokenIndex = 0;        // Tracks the current token
int totalTokens = 0;              // Total tokens available
Token tokens[MAX_TOKENS];         // Token array
Token* tokenStream = tokens;      // Pointer to the token array
int skipToMatchingDelimiter(const char* delimiter);

// Function prototypes specific to syntax_analyzer.c
Token* peekNextToken();                      // Peek at the next token

// ---------------------------------------
// Utility Functions of Syntax Analyzer
// ---------------------------------------

// Function to peek at the next token without advancing the current index
Token* peekNextToken() {
    // Ensure there's at least one more token to peek
    if (currentTokenIndex + 1 < totalTokens) {
        return &tokens[currentTokenIndex + 1];
    }
    printf("DEBUG: No next token available. Current Index=%d, Total Tokens=%d\n",
           currentTokenIndex, totalTokens);
    return NULL;
}

// Function to retrieve the next token
Token* getNextToken() {
    if (currentTokenIndex < totalTokens) {
        Token* currentToken = &tokens[currentTokenIndex];
        printf("[DEBUG] getNextToken: Retrieved Token[%d]: Type='%s', Value='%s', Line=%d\n",
               currentTokenIndex, currentToken->type, currentToken->value, currentToken->lineNumber);

        // Advance the token index
        currentTokenIndex++;

        // Check for whitespace or comments and skip if necessary
        while (currentTokenIndex < totalTokens) {
            Token* nextToken = &tokens[currentTokenIndex];
            if (strcmp(nextToken->type, "Whitespace") == 0 || strcmp(nextToken->type, "Comment") == 0) {
                printf("[DEBUG] Skipping Token[%d]: Type='%s', Value='%s', Line=%d\n",
                       currentTokenIndex, nextToken->type, nextToken->value, nextToken->lineNumber);
                currentTokenIndex++;
            } else {
                break;
            }
        }

        return currentToken;
    } else {
        printf("[DEBUG] getNextToken: End of token stream reached. Current Index=%d, Total Tokens=%d\n",
               currentTokenIndex, totalTokens);
        return NULL; // No more tokens available
    }
}

Token* peekToken() {
    static int previousTokenIndex = -1;
    static int repeatCounter = 0;

    if (currentTokenIndex < totalTokens) {
        Token* token = &tokens[currentTokenIndex];

        // Detect repetitive token peeks
        if (currentTokenIndex == previousTokenIndex) {
            repeatCounter++;
            if (repeatCounter > 10) { // Threshold to detect endless loops
                printf("[CRITICAL] Endless loop detected at Token[%d]: Type='%s', Value='%s', Line=%d\n",
                       currentTokenIndex, token->type, token->value, token->lineNumber);
                exit(1); // Forcefully terminate to analyze the issue
            }
        } else {
            repeatCounter = 0; // Reset counter if token index changes
        }

        previousTokenIndex = currentTokenIndex;

        // Debug output
        printf("[DEBUG] peekToken: Current Token[%d]: Type='%s', Value='%s', Line=%d\n",
               currentTokenIndex, token->type, token->value, token->lineNumber);
        return token;
    }

    printf("[DEBUG] peekToken: End of token stream reached. Current Index=%d, Total Tokens=%d\n",
           currentTokenIndex, totalTokens);
    return NULL;
}

// Function to trim leading and trailing whitespace from a string
void trimWhitespace(char *str) {
    if (!str || !*str) return;

    // Trim leading whitespace
    char *start = str;
    while (isspace((unsigned char)*start)) {
        start++;
    }

    // Move trimmed string to the beginning
    if (start != str) {
        memmove(str, start, strlen(start) + 1);
    }

    // Trim trailing whitespace
    char *end = str + strlen(str) - 1;
    while (end >= str && isspace((unsigned char)*end)) {
        *end = '\0';
        end--;
    }
}

// Token maper function = Match the tokens from the symbol table and load them using the loadTokenFromFile
void mapToken(Token* token) {
    if (strcmp(token->type, "Delimiter") == 0) {
        if (strcmp(token->value, "(") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, "(");
        } else if (strcmp(token->value, ")") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, ")");
        } else if (strcmp(token->value, "{") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, "{");
        } else if (strcmp(token->value, "}") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, "}");
        } else if (strcmp(token->value, "[") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, "[");
        } else if (strcmp(token->value, "]") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, "]");
        } else if (strcmp(token->value, ";") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, ";");
        } else if (strcmp(token->value, ":") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, ":");
        } else if (strcmp(token->value, ",") == 0) {
            strcpy(token->type, "Delimiter");
            strcpy(token->value, ",");
        }
    } else if (strcmp(token->type, "ArithmeticOperator") == 0) {
        if (strcmp(token->value, "+") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "+");
        } else if (strcmp(token->value, "-") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "-");
        } else if (strcmp(token->value, "*") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "*");
        } else if (strcmp(token->value, "/") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "/");
        } else if (strcmp(token->value, "%") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "%");
        } else if (strcmp(token->value, "^") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "^");
        } else if (strcmp(token->value, "//") == 0) {
            strcpy(token->type, "ArithmeticOperator");
            strcpy(token->value, "//");
        }
    } else if (strcmp(token->type, "AssignmentOperator") == 0) {
        if (strcmp(token->value, "=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "=");
        } else if (strcmp(token->value, "+=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "+=");
        } else if (strcmp(token->value, "-=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "-=");
        } else if (strcmp(token->value, "*=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "*=");
        } else if (strcmp(token->value, "/=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "/=");
        } else if (strcmp(token->value, "%=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "%=");
        } else if (strcmp(token->value, "//=") == 0) {
            strcpy(token->type, "AssignmentOperator");
            strcpy(token->value, "//=");
        }
    } else if (strcmp(token->type, "LogicalOperator") == 0) {
        if (strcmp(token->value, "!") == 0) {
            strcpy(token->type, "LogicalOperator");
            strcpy(token->value, "!");
        } else if (strcmp(token->value, "||") == 0) {
            strcpy(token->type, "LogicalOperator");
            strcpy(token->value, "||");
        } else if (strcmp(token->value, "&&") == 0) {
            strcpy(token->type, "LogicalOperator");
            strcpy(token->value, "&&");
        }
    } else if (strcmp(token->type, "RelationalOperator") == 0) {
        if (strcmp(token->value, "==") == 0) {
            strcpy(token->type, "RelationalOperator");
            strcpy(token->value, "==");
        } else if (strcmp(token->value, "!=") == 0) {
            strcpy(token->type, "RelationalOperator");
            strcpy(token->value, "!=");
        } else if (strcmp(token->value, ">") == 0) {
            strcpy(token->type, "RelationalOperator");
            strcpy(token->value, ">");
        } else if (strcmp(token->value, "<") == 0) {
            strcpy(token->type, "RelationalOperator");
            strcpy(token->value, "<");
        } else if (strcmp(token->value, ">=") == 0) {
            strcpy(token->type, "RelationalOperator");
            strcpy(token->value, ">=");
        } else if (strcmp(token->value, "<=") == 0) {
            strcpy(token->type, "RelationalOperator");
            strcpy(token->value, "<=");
        }
    } else if (strcmp(token->type, "INT_LITERAL") == 0) {
        strcpy(token->type, "INT_LITERAL");
    } else if (strcmp(token->type, "FLOAT_LITERAL") == 0) {
        strcpy(token->type, "FLOAT_LITERAL");
    } else if (strcmp(token->type, "CHAR_LITERAL") == 0) {
        strcpy(token->type, "CHAR_LITERAL");
    } else if (strcmp(token->type, "STRING_LITERAL") == 0) {
        strcpy(token->type, "STRING_LITERAL");
    } else if (strcmp(token->type, "ReservedWord") == 0) {
        strcpy(token->type, "ReservedWord");
    } else if (strcmp(token->type, "NoiseWord") == 0) {
        strcpy(token->type, "NoiseWord");
    } else if (strstr(token->type, "Comment") != NULL) {
        strcpy(token->type, "Comment");
    }
}

// Function to load tokens from a file
int loadTokensFromFile(const char *filename) {
    FILE *file = fopen(filename, "r");
    if (!file) {
        printf("Error: Could not open file %s\n", filename);
        return 0;
    }

    char line[256];
    totalTokens = 0;

    printf("\n[DEBUG] Loading tokens from %s...\n", filename);

    while (fgets(line, sizeof(line), file)) {
        // Trim whitespace from the line
        trimWhitespace(line);

        // Skip empty lines
        if (strlen(line) == 0) {
            printf("[DEBUG] Skipping empty line.\n");
            continue;
        }

        // Parse the line into token fields (comma-separated)
        Token token;
        char type[50] = {0}, value[50] = {0};
        int lineNumber = 0;

        char *firstComma = strchr(line, ',');
        char *lastComma = strrchr(line, ',');

        // Handle invalid lines
        if (!firstComma || !lastComma || firstComma == lastComma) {
            reportSyntaxError("Invalid or unparsed token line.");
            continue; // Skip to the next line
        }

        // Extract fields
        *firstComma = '\0';
        strncpy(type, line, sizeof(type) - 1);
        *lastComma = '\0';
        strncpy(value, firstComma + 1, sizeof(value) - 1);
        lineNumber = atoi(lastComma + 1);

        // Populate the token
        strncpy(token.type, type, sizeof(token.type) - 1);
        strncpy(token.value, value, sizeof(token.value) - 1);
        token.lineNumber = lineNumber;

        // Map the token to handle value-specific tokens
        mapToken(&token);

        // Add the token to the list
        if (totalTokens < MAX_TOKENS) {
            tokens[totalTokens++] = token;
        } else {
            printf("Error: Token limit exceeded. Increase MAX_TOKENS.\n");
            break;
        }
    }

    fclose(file);

    // Print loaded tokens
    printf("\n[DEBUG] Total Tokens Loaded: %d\n", totalTokens);
    for (int i = 0; i < totalTokens; i++) {
        printf("[DEBUG] Token[%d]: Type='%s', Value='%s', Line=%d\n",
               i, tokens[i].type, tokens[i].value, tokens[i].lineNumber);
    }

    printf("[DEBUG] Completed loading tokens from %s.\n", filename);
    return totalTokens;
}

// Token Matching
ParseTreeNode* matchToken(const char* expectedType, const char* expectedValue) {
    printf("[DEBUG] Matching Token. Expected Type='%s', Value='%s'\n", expectedType, expectedValue);

    Token* token = peekToken(); // Peek the current token without advancing
    if (!token) {
        printf("[ERROR] No tokens available for matching.\n");
        reportSyntaxError("Unexpected end of input while matching token.");
        recoverFromError();
        return NULL;
    }

    // Log the current token
    printf("[DEBUG] Current Token: Type='%s', Value='%s', Line=%d\n",
           token->type, token->value, token->lineNumber);

    // Check if the token matches the expected type and value
    if (strcmp(token->type, expectedType) != 0 || strcmp(token->value, expectedValue) != 0) {
        printf("[ERROR] Token mismatch. Expected Type='%s', Value='%s'. Found Type='%s', Value='%s'\n",
               expectedType, expectedValue, token->type, token->value);
        char errorMessage[256];
        snprintf(errorMessage, sizeof(errorMessage),
                 "Syntax Error at line %d: Expected '%s' of type '%s' but found '%s' of type '%s'.",
                 token->lineNumber, expectedValue, expectedType, token->value, token->type);
        reportSyntaxError(errorMessage);
        recoverFromError();
        return NULL;
    }

    // If token matches, log the match
    printf("[DEBUG] Token matched successfully. Type='%s', Value='%s', Line=%d\n",
           token->type, token->value, token->lineNumber);

    // Consume the token by advancing to the next
    token = getNextToken();
    if (!token) {
        printf("[WARNING] getNextToken returned NULL after successful match.\n");
    } else {
        printf("[DEBUG] Token advanced to: Type='%s', Value='%s', Line=%d\n",
               token->type, token->value, token->lineNumber);
    }

    // Create and return a parse tree node for the matched token
    ParseTreeNode* node = createParseTreeNode(expectedType, token->value);
    if (!node) {
        printf("[ERROR] Failed to create parse tree node for matched token.\n");
        reportSyntaxError("Internal error: Unable to create parse tree node.");
        recoverFromError();
        return NULL;
    }

    return node;
}


// ---------------------------------------
// Error Handling
// ---------------------------------------

// Syntax Error Notice
int reportSyntaxError(const char* message) {
    Token* token = peekToken();

    if (token) {
        // Apply token mapping if necessary
        mapToken(token); // Ensure the token is correctly mapped before displaying

        printf("Syntax Error at line %d: %s\n", token->lineNumber, message);
        printf("DEBUG: Current Token - Type='%s', Value='%s'\n",
               token->type, token->value);
    } else {
        printf("Syntax Error: %s\n", message);
        printf("DEBUG: No more tokens available for context.\n");
    }

    printf("Attempting to recover...\n");
}

// Panic Mode Recovery
int recoverFromError() {
    printf("DEBUG: Initiating error recovery...\n");

    // Recovery delimiters for statement endings or block boundaries
    const char* recoveryDelimiters[] = {";", "{", "}", ")", NULL};

    // Recovery keywords for starting new statements
    const char* recoveryKeywords[] = {"if", "else", "for", "while", "do", "return", "input", "printf", "array", "int", "float", "char", "bool", "string", NULL};

    Token* token;
    while ((token = peekToken()) != NULL) {
        printf("DEBUG: Token during recovery: Type='%s', Value='%s', Line=%d\n",
               token->type, token->value, token->lineNumber);

        // Recovery at delimiters: ';', '}', etc.
        if (strcmp(token->type, "Delimiter") == 0) {
            for (int i = 0; recoveryDelimiters[i] != NULL; i++) {
                if (strcmp(token->value, recoveryDelimiters[i]) == 0) {
                    printf("DEBUG: Recovered at delimiter: '%s' on line %d\n", token->value, token->lineNumber);
                    getNextToken(); // Consume the delimiter
                    return 1; // Recovery succeeded
                }
            }
        }

        // Recovery at keywords: 'if', 'else', etc.
        if (strcmp(token->type, "Keyword") == 0) {
            for (int i = 0; recoveryKeywords[i] != NULL; i++) {
                if (strcmp(token->value, recoveryKeywords[i]) == 0) {
                    printf("DEBUG: Recovered at keyword: '%s' on line %d\n", token->value, token->lineNumber);
                    return 1; // Recovery succeeded
                }
            }
        }

        // Skip over comments explicitly
        if (strcmp(token->type, "Comment") == 0) {
            printf("DEBUG: Skipping comment token during recovery: '%s' on line %d\n", token->value, token->lineNumber);
            getNextToken(); // Consume the comment token
            continue; // Continue recovery process
        }

        // Skip the current token if no recovery point is found
        printf("DEBUG: Skipping Token: Type='%s', Value='%s', Line=%d\n",
               token->type, token->value, token->lineNumber);
        getNextToken();
    }

    printf("ERROR: Unable to recover from syntax error. Reached end of input.\n");
    return 0; // Recovery failed
}

// ---------------------------------------
// Top-Level Grammar Rules
// ---------------------------------------

// Recursive Descent Parsing Function
// Recursive Descent Parsing Function
ParseTreeNode* parseProgram() {
    printf("[DEBUG] Starting parseProgram...\n");

    // Create the root node for the program
    ParseTreeNode* root = createParseTreeNode("Program", NULL);

    Token* lastToken = NULL;
    int loopSafetyCounter = 0;

    // Loop through the tokens and parse statements
    while (peekToken()) {
        Token* currentToken = peekToken();

        // Safety check to prevent infinite loops
        if (lastToken == currentToken) {
            loopSafetyCounter++;
            if (loopSafetyCounter > 100) {
                printf("[ERROR] Infinite loop detected at Token: Type='%s', Value='%s', Line=%d\n",
                       currentToken->type, currentToken->value, currentToken->lineNumber);
                break;
            }
        } else {
            loopSafetyCounter = 0; // Reset counter if token advances
        }
        lastToken = currentToken;

        printf("[DEBUG] Parsing statement starting with Token: Type='%s', Value='%s', Line=%d\n",
               currentToken->type, currentToken->value, currentToken->lineNumber);

        // Parse the current statement
        ParseTreeNode* statementNode = parseStatement();

        if (!statementNode) {
            printf("[WARNING] Failed to parse statement at Token: Type='%s', Value='%s', Line=%d\n",
                   currentToken->type, currentToken->value, currentToken->lineNumber);

            // Attempt recovery from error
            if (!recoverFromError()) {
                printf("[ERROR] Unable to recover from syntax error. Ending parsing.\n");
                break;
            }
            continue; // Retry parsing from the next valid token
        }

        // Add the successfully parsed statement to the program tree
        addChild(root, statementNode);
        printf("[DEBUG] Added child to root node. Current children count: %d\n", root->childCount);
    }

    printf("[DEBUG] Completed parsing program.\n");
    return root;
}

// ---------------------------------------
// Main Function
// ---------------------------------------

int main(int argc, char* argv[]) {

    // Global Variables - Store tokens and tracking variables
    currentTokenIndex = 0;
    totalTokens = 0;
    tokenStream = tokens;

    printf("\n\n[DEBUG] Starting Syntax Analysis...\n");

    // Open the specified directory or current directory to look for .prsm files
    struct dirent *entry;
    DIR *dp = NULL;
    const char* directory = (argc > 1) ? argv[1] : ".";
    dp = opendir(directory);
    if (!dp) {
        printf("Error: Unable to open directory %s.\n", directory);
        return 1;
    }

    // List .txt files
    char prsmFiles[100][256]; // Fixed buffer for simplicity
    int fileCount = 0;

    printf("Available .txt files in directory '%s':\n", directory);
    while ((entry = readdir(dp))) {
        if (strstr(entry->d_name, ".txt") && strlen(entry->d_name) > 5) {
            printf("%d. %s\n", fileCount + 1, entry->d_name);
            snprintf(prsmFiles[fileCount], sizeof(prsmFiles[fileCount]), "%s/%s", directory, entry->d_name);
            fileCount++;
        }
    }
    closedir(dp);

    if (fileCount == 0) {
        printf("No .txt files found in directory %s.\n", directory);
        return 1;
    }

    // Prompt user to select a file
    int choice;
    printf("\nEnter the number of the file to analyze (1-%d): ", fileCount);
    if (scanf("%d", &choice) != 1 || choice < 1 || choice > fileCount) {
        printf("Invalid choice. Exiting.\n");
        return 1;
    }

    // Load tokens from the selected .prsm file
    const char* selectedFile = prsmFiles[choice - 1];
    printf("\nSelected file: %s\n", selectedFile);
    if (!loadTokensFromFile(selectedFile)) {
        printf("Error: Failed to load tokens from file %s.\n", selectedFile);
        return 1;
    }

    // Parse and build the parse tree
    ParseTreeNode* root = parseProgram();

    // Validate the root parse tree
    if (!root) {
        printf("Parsing failed. No parse tree generated.\n");
        return 1;
    }

    // Write the parse tree to a file
    FILE* parseTreeFile = fopen("parse_tree.txt", "w");
    if (!parseTreeFile) {
        printf("Error: Unable to create parse_tree.txt\n");
        freeParseTree(root);
        return 1;
    }

    writeParseTreeToFile(root, parseTreeFile, 0);
    fclose(parseTreeFile);

    printf("\nParse tree written to parse_tree.txt\n");

    // Free the parse tree
    freeParseTree(root);

    printf("\n[DEBUG] Syntax Analysis Completed Successfully!\n");
    return 0;
}

// ---------------------------------------
// Declaration Statements
// ---------------------------------------

ParseTreeNode* parseVariableDeclaration() {
    printf("[DEBUG] Parsing Variable Declaration...\n");

    // Create a node for the variable declaration
    ParseTreeNode* varDeclNode = createParseTreeNode("VariableDeclaration", "");

    // Match the type specifier (e.g., int, float, etc.)
    ParseTreeNode* typeSpecifierNode = parseTypeSpecifier();
    if (!typeSpecifierNode) {
        reportSyntaxError("Expected type specifier in variable declaration.");
        recoverFromError();
        freeParseTree(varDeclNode);
        return NULL;
    }
    addChild(varDeclNode, typeSpecifierNode); // Add the type specifier node

    // Parse the identifier list with optional initialization
    while (true) {
        // Match identifier
        Token* token = peekToken();
        if (!token || strcmp(token->type, "IDENTIFIER") != 0) {
            reportSyntaxError("Expected identifier in variable declaration.");
            recoverFromError();
            freeParseTree(varDeclNode);
            return NULL;
        }
        addChild(varDeclNode, matchToken("IDENTIFIER", token->value));

        // Check for optional initialization
        token = peekToken();
        if (token && strcmp(token->type, "AssignmentOperator") == 0) {
            printf("[DEBUG] Detected assignment operator for initialization.\n");
            addChild(varDeclNode, matchToken("AssignmentOperator", token->value)); // Match assignment operator

            // Delegate to parseInitializer for initialization
            ParseTreeNode* initializerNode = parseInitializer();
            if (!initializerNode) {
                reportSyntaxError("Failed to parse initializer in variable declaration.");
                recoverFromError();
                freeParseTree(varDeclNode);
                return NULL;
            }
            addChild(varDeclNode, initializerNode);
        }

        // Check for a comma or semicolon
        token = peekToken();
        if (token && strcmp(token->type, "Delimiter") == 0) {
            if (strcmp(token->value, ",") == 0) {
                printf("[DEBUG] Detected ',' for multiple variable declarations.\n");
                addChild(varDeclNode, matchToken("Delimiter", ",")); // Match comma and continue
            } else if (strcmp(token->value, ";") == 0) {
                printf("[DEBUG] Detected ';' to end variable declaration.\n");
                addChild(varDeclNode, matchToken("Delimiter", ";")); // Match semicolon and break
                break;
            } else {
                reportSyntaxError("Unexpected delimiter in variable declaration.");
                recoverFromError();
                freeParseTree(varDeclNode);
                return NULL;
            }
        } else {
            reportSyntaxError("Expected ',' or ';' in variable declaration.");
            recoverFromError();
            freeParseTree(varDeclNode);
            return NULL;
        }
    }

    printf("[DEBUG] Successfully parsed Variable Declaration.\n");
    return varDeclNode;
}

ParseTreeNode* parseBlock() {
    printf("[DEBUG] Parsing Block...\n");

    // Create a parse tree node for the block
    ParseTreeNode* blockNode = createParseTreeNode("Block", "");

    // Match '{' to start the block
    Token* token = peekToken();
    if (!token || strcmp(token->type, "Delimiter") != 0 || strcmp(token->value, "{") != 0) {
        reportSyntaxError("Expected '{' to start block.");
        recoverFromError();
        freeParseTree(blockNode);
        return NULL;
    }
    addChild(blockNode, matchToken("Delimiter", "{"));

    // Parse statements inside the block
    while (true) {
        token = peekToken();
        if (!token) {
            reportSyntaxError("Unexpected end of input inside block.");
            recoverFromError();
            freeParseTree(blockNode);
            return NULL;
        }

        // Break on encountering '}' (end of block)
        if (strcmp(token->type, "Delimiter") == 0 && strcmp(token->value, "}") == 0) {
            break;
        }

        // Delegate statement parsing
        ParseTreeNode* statementNode = parseStatement();
        if (!statementNode) {
            printf("[DEBUG] Failed to parse statement inside block. Attempting recovery...\n");
            recoverFromError();
            continue; // Skip invalid statements and attempt to recover
        }

        // Add parsed statement to the block node
        addChild(blockNode, statementNode);
    }

    // Match '}' to close the block
    token = peekToken();
    if (!token || strcmp(token->type, "Delimiter") != 0 || strcmp(token->value, "}") != 0) {
        reportSyntaxError("Expected '}' to close block.");
        recoverFromError();
        freeParseTree(blockNode);
        return NULL;
    }
    addChild(blockNode, matchToken("Delimiter", "}"));

    printf("[DEBUG] Successfully parsed Block.\n");
    return blockNode;
}

ParseTreeNode* parseStatementList() {
    printf("[DEBUG] Parsing Statement List...\n");

    // Create a node for the statement list
    ParseTreeNode* statementListNode = createParseTreeNode("StatementList", "");

    while (peekToken()) {
        Token* token = peekToken();

        // Check for block-ending delimiters (to stop parsing the list)
        if (strcmp(token->type, "Delimiter") == 0 && (strcmp(token->value, "}") == 0)) {
            printf("[DEBUG] End of statement list detected at '}'.\n");
            break;
        }

        // Parse the next statement
        ParseTreeNode* statementNode = parseStatement();
        if (!statementNode) {
            reportSyntaxError("Failed to parse a statement in the statement list.");
            recoverFromError();
            continue; // Attempt to parse the next statement
        }

        addChild(statementListNode, statementNode);
        printf("[DEBUG] Added statement to Statement List. Current children count: %d\n", statementListNode->childCount);
    }

    printf("[DEBUG] Successfully parsed Statement List.\n");
    return statementListNode;
}

ParseTreeNode* parseInitializer() {
    printf("[DEBUG] Parsing Initializer...\n");

    Token* token = peekToken();
    if (!token) {
        reportSyntaxError("Unexpected end of input while parsing initializer.");
        recoverFromError();
        return NULL;
    }

    // Check for compound initializer with `{`
    if (strcmp(token->type, "Delimiter") == 0 && strcmp(token->value, "{") == 0) {
        printf("[DEBUG] Detected compound initializer.\n");

        ParseTreeNode* initializerNode = createParseTreeNode("CompoundInitializer", "");

        // Match `{`
        addChild(initializerNode, matchToken("Delimiter", "{"));

        // Parse the first initializer
        ParseTreeNode* innerInitializer = parseInitializer();
        if (!innerInitializer) {
            reportSyntaxError("Failed to parse initializer inside compound initializer.");
            recoverFromError();
            freeParseTree(initializerNode);
            return NULL;
        }
        addChild(initializerNode, innerInitializer);

        // Handle optional comma-separated initializers
        token = peekToken();
        while (token && strcmp(token->type, "Delimiter") == 0 && strcmp(token->value, ",") == 0) {
            printf("[DEBUG] Detected ',' in compound initializer.\n");

            // Match `,`
            addChild(initializerNode, matchToken("Delimiter", ","));
